--- a/Diplomka/index.html
+++ b/Diplomka/index.html
@@ -47,8 +47,9 @@
                             <ul class="header__nav-user-list">
                                 <li class="header__nav-user-item">
                                     <a href="#" class="header__nav-user-link">
-                                        <svg width="16.500977" height="14.835114" viewBox="0 0 16.501 14.8351" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                        <svg width="16.500977" height="14.835114" viewBox="0 0 16.501 14.8351"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg"
+                                            xmlns:xlink="http://www.w3.org/1999/xlink">
                                             <path
                                                 d="M2.36 1.73C0.48 3.33 0.22 6 1.69 7.89C2.92 9.47 6.63 12.79 7.85 13.86C7.99 13.98 8.05 14.04 8.13 14.06C8.2 14.08 8.28 14.08 8.35 14.06C8.43 14.04 8.5 13.98 8.63 13.86C9.85 12.79 13.56 9.47 14.79 7.89C16.26 6 16.03 3.31 14.12 1.73C12.21 0.14 9.74 0.59 8.24 2.34C6.74 0.59 4.24 0.12 2.36 1.73Z"
                                                 stroke="#807D7E" stroke-opacity="1.000000" stroke-width="1.500000"
@@ -58,8 +59,9 @@
                                 </li>
                                 <li class="header__nav-user-item">
                                     <a href="#" class="header__nav-user-link">
-                                        <svg width="14.833252" height="14.833344" viewBox="0 0 14.8333 14.8333" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                        <svg width="14.833252" height="14.833344" viewBox="0 0 14.8333 14.8333"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg"
+                                            xmlns:xlink="http://www.w3.org/1999/xlink">
                                             <path
                                                 d="M7.41 9.08C5.11 9.08 3.25 7.21 3.25 4.91C3.25 2.61 5.11 0.75 7.41 0.75C9.71 0.75 11.58 2.61 11.58 4.91C11.58 7.21 9.71 9.08 7.41 9.08ZM0.75 14.08C0.75 11.32 3.73 9.08 7.41 9.08M14.08 14.08C14.08 11.32 11.09 9.08 7.41 9.08"
                                                 stroke="#807D7E" stroke-opacity="1.000000" stroke-width="1.500000"
@@ -69,8 +71,9 @@
                                 </li>
                                 <li class="header__nav-user-item">
                                     <a href="#" class="header__nav-user-link">
-                                        <svg width="16.023193" height="14.833344" viewBox="0 0 16.0232 14.8333" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                        <svg width="16.023193" height="14.833344" viewBox="0 0 16.0232 14.8333"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg"
+                                            xmlns:xlink="http://www.w3.org/1999/xlink">
                                             <path
                                                 d="M0.75 0.75L1.25 0.75C2.1 0.75 2.81 1.39 2.91 2.23L3.58 8.43C3.68 9.27 4.39 9.91 5.24 9.91L12.45 9.91C13.21 9.91 13.88 9.4 14.07 8.66L15.22 4.15C15.48 3.09 14.69 2.07 13.6 2.07L3.75 2.07M4.08 14.08C3.62 14.08 3.25 13.71 3.25 13.25C3.25 12.78 3.62 12.41 4.08 12.41C4.54 12.41 4.91 12.78 4.91 13.25C4.91 13.71 4.54 14.08 4.08 14.08ZM3.77 12.93L4.39 12.93M3.77 13.56L4.39 13.56M13.25 14.08C12.78 14.08 12.41 13.71 12.41 13.25C12.41 12.78 12.78 12.41 13.25 12.41C13.71 12.41 14.08 12.78 14.08 13.25C14.08 13.71 13.71 14.08 13.25 14.08ZM12.93 12.93L13.56 12.93M12.93 13.56L13.56 13.56"
                                                 stroke="#807D7E" stroke-opacity="1.000000" stroke-width="1.500000" />
@@ -210,7 +213,8 @@
                             <button type="button" class="collection__prev">
                                 <svg width="15.185791" height="13.606445" viewBox="0 0 15.1858 13.6064" fill="none"
                                     xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                    <path d="M0.8 6.8L13.8 6.8M8.8 0.8L14.09 6.09C14.48 6.48 14.48 7.11 14.09 7.51L8.8 12.8"
+                                    <path
+                                        d="M0.8 6.8L13.8 6.8M8.8 0.8L14.09 6.09C14.48 6.48 14.48 7.11 14.09 7.51L8.8 12.8"
                                         stroke="#3C4242" stroke-opacity="1.000000" stroke-width="1.600000"
                                         stroke-linecap="round" />
                                 </svg>
@@ -218,7 +222,8 @@
                             <button type="button" class="collection__next">
                                 <svg width="15.185791" height="13.606445" viewBox="0 0 15.1858 13.6064" fill="none"
                                     xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                    <path d="M0.8 6.8L13.8 6.8M8.8 0.8L14.09 6.09C14.48 6.48 14.48 7.11 14.09 7.51L8.8 12.8"
+                                    <path
+                                        d="M0.8 6.8L13.8 6.8M8.8 0.8L14.09 6.09C14.48 6.48 14.48 7.11 14.09 7.51L8.8 12.8"
                                         stroke="#3C4242" stroke-opacity="1.000000" stroke-width="1.600000"
                                         stroke-linecap="round" />
                                 </svg>
@@ -891,102 +896,103 @@
         <footer class="footer">
             <div class="container">
                 <div class="footer__inner">
-                    <div class="footer__info">
-                        <div class="footer__info-inner">
-                            <h4 class="footer__title">
-                                Need Help
-                            </h4>
-                            <a href="#" class="footer__info-text">
-                                Contact Us
-                            </a>
-                            <a href="#" class="footer__info-text">
-                                Track Order
-                            </a>
-                            <a href="#" class="footer__info-text">
-                                Returns & Refunds
-                            </a>
-                            <a href="#" class="footer__info-text">
-                                FAQ's
-                            </a>
-                            <a href="#" class="footer__info-text">
-                                Career
-                            </a>
+                    <div class="footer__container">
+                        <div class="footer__info">
+                            <div class="footer__info-inner">
+                                <h4 class="footer__title">
+                                    Need Help
+                                </h4>
+                                <a href="#" class="footer__info-text">
+                                    Contact Us
+                                </a>
+                                <a href="#" class="footer__info-text">
+                                    Track Order
+                                </a>
+                                <a href="#" class="footer__info-text">
+                                    Returns & Refunds
+                                </a>
+                                <a href="#" class="footer__info-text">
+                                    FAQ's
+                                </a>
+                                <a href="#" class="footer__info-text">
+                                    Career
+                                </a>
+                            </div>
+                            <div class="footer__info-inner">
+                                <h4 class="footer__title">
+                                    Company
+                                </h4>
+                                <a href="#" class="footer__info-text">
+                                    About Us
+                                </a>
+                                <a href="#" class="footer__info-text">
+                                    euphoria Blog
+                                </a>
+                                <a href="#" class="footer__info-text">
+                                    euphoriastan
+                                </a>
+                                <a href="#" class="footer__info-text">
+                                    Collaboration
+                                </a>
+                                <a href="#" class="footer__info-text">
+                                    Media
+                                </a>
+                            </div>
+                            <div class="footer__info-inner">
+                                <h4 class="footer__title">
+                                    More Info
+                                </h4>
+                                <a href="#" class="footer__info-text">
+                                    Term and Conditions
+                                </a>
+                                <a href="#" class="footer__info-text">
+                                    Privacy Policy
+                                </a>
+                                <a href="#" class="footer__info-text">
+                                    Shipping Policy
+                                </a>
+                                <a href="#" class="footer__info-text">
+                                    Sitemap
+                                </a>
+                            </div>
+                            <div class="footer__info-inner">
+                                <h4 class="footer__title">
+                                    Location
+                                </h4>
+                                <a href="#" class="footer__info-text">
+                                    support@euphoria.in
+                                </a>
+                                <a href="#" class="footer__info-text">
+                                    Eklingpura Chouraha, Ahmedabad Main Road
+                                </a>
+                                <a href="#" class="footer__info-text">
+                                    (NH 8- Near Mahadev Hotel) Udaipur, India- 313002
+                                </a>
+                            </div>
                         </div>
-                        <div class="footer__info-inner">
-                            <h4 class="footer__title">
-                                Company
-                            </h4>
-                            <a href="#" class="footer__info-text">
-                                About Us
-                            </a>
-                            <a href="#" class="footer__info-text">
-                                euphoria Blog
-                            </a>
-                            <a href="#" class="footer__info-text">
-                                euphoriastan
-                            </a>
-                            <a href="#" class="footer__info-text">
-                                Collaboration
-                            </a>
-                            <a href="#" class="footer__info-text">
-                                Media
-                            </a>
-                        </div>
-                        <div class="footer__info-inner">
-                            <h4 class="footer__title">
-                                More Info
-                            </h4>
-                            <a href="#" class="footer__info-text">
-                                Term and Conditions
-                            </a>
-                            <a href="#" class="footer__info-text">
-                                Privacy Policy
-                            </a>
-                            <a href="#" class="footer__info-text">
-                                Shipping Policy
-                            </a>
-                            <a href="#" class="footer__info-text">
-                                Sitemap
-                            </a>
-                        </div>
-                        <div class="footer__info-inner">
-                            <h4 class="footer__title">
-                                Location
-                            </h4>
-                            <a href="#" class="footer__info-text">
-                                support@euphoria.in
-                            </a>
-                            <a href="#" class="footer__info-text">
-                                Eklingpura Chouraha, Ahmedabad Main Road
-                            </a>
-                            <a href="#" class="footer__info-text">
-                                (NH 8- Near Mahadev Hotel) Udaipur, India- 313002
-                            </a>
-                        </div>
-                    </div>
-                    <div class="footer__grid">
-                        <div class="socials__footer">
-                            <a href="#" class="social__footer-link"><img src="img/icons/socials/face.svg"
-                                    alt="facebook"></a>
-                            <a href="#" class="social__footer-link"><img src="img/icons/socials/inst.svg"
-                                    alt="instagram"></a>
-                            <a href="#" class="social__footer-link"><img src="img/icons/socials/twitter.svg"
-                                    alt="twitter"></a>
-                            <a href="#" class="social__footer-link"><img src="img/icons/socials/in.svg"
-                                    alt="facebook"></a>
-                        </div>
-                        <h4 class="footer__title footer__download-title">Download The App</h4>
-                        <div class="footer__download">
-                            <a href="#" class="footer__download-play">
-                                <img class="footer__download-img" src="img/icons/play.svg" alt="play market">
-                                <span class="footer__download-text">android app on</span>
-                                Google Play
-                            </a>
-                            <a href="#" class="footer__download-app">
-                                <img class="footer__download-img" src="img/icons/mobile.svg" alt="app store">
-                                <span class="footer__download-text">Available on the</span>
-                                App Store
-                            </a>
+                        <div class="footer__flex">
+                            <div class="footer__title footer__download-title">Download The App
+                            </div>
+                            <div class="footer__soc">
+                                <div class="socials__footer">
+                                    <a href="#" class="social__footer-link"><img src="img/icons/socials/face.svg"
+                                            alt="facebook"></a>
+                                    <a href="#" class="social__footer-link"><img src="img/icons/socials/inst.svg"
+                                            alt="instagram"></a>
+                                    <a href="#" class="social__footer-link"><img src="img/icons/socials/twitter.svg"
+                                            alt="twitter"></a>
+                                    <a href="#" class="social__footer-link"><img src="img/icons/socials/in.svg"
+                                            alt="facebook"></a>
+                                </div>
+                                <div class="footer__download">
+                                    <a href="#" class="footer__download-play">
+                                        <img class="footer__download-img" src="img/google.svg" alt="play market">
+                                    </a>
+                                    <a href="#" class="footer__download-app">
+                                        <img class="footer__download-img" src="img/app_store.svg" alt="app store">
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
